<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="ve.ucab.flood.MainActivity">

    <LinearLayout
        android:id="@+id/area_bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/texto_bienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/letra_bienvenido"
                />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_icono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_bienvenido"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/imagen_conletras"
            android:layout_width="236dp"
            android:layout_height="177dp"
            android:src="@drawable/icono_y_letras_naranja"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNombreRio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            >
            <EditText
                android:id="@+id/editarNombreRio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_rio"
                android:layout_marginTop="80dp"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>
</LinearLayout>

    <LinearLayout
        android:id="@+id/area_nombre_rio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_icono"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/texto_ingrese_dato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagen_conletras"
            android:text="@string/ingrese_datos"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_icono">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNumeroTlf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            >
            <EditText
                android:id="@+id/editarTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textColor="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/boton_siguiente"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/boton_siguiente"
            android:textStyle="bold"
            android:textSize="@dimen/letra_botones"
            android:textColor="#FFFFFF"

            />
    </LinearLayout>


</RelativeLayout>
